asgn4_main/Cleaned/bin/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    KW_case
    KW_yield
    TOK_tilda
    KW_protected
    KW_lazy
    KW_with
    KW_private
    KW_do
    KW_sealed
    KW_final
    KW_Try
    KW_forSome
    TOK_at
    KW_ofdim
    TOK_ignore
    KW_override
    KW_implicit
    KW_abstract
    TOK_nl
    TOK_long
    KW_this
    KW_catch
    KW_type
    KW_finally
    KW_super
    KW_throw
    KW_extends
    KW_match
    KW_or
    TOK_eq_gt
    TOK_hash
    KW_trait
    KW_import
    KW_package
    TOK_error
    KW_class
    TOK_cmnt

Grammar

Rule 0     S' -> compilation_unit
Rule 1     compilation_unit -> class_and_obj_declarations
Rule 2     class_and_obj_declarations -> class_and_obj_declaration
Rule 3     class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration
Rule 4     class_and_obj_declaration -> singleton_object
Rule 5     singleton_object -> object_declaration block
Rule 6     object_declaration -> KW_obj TOK_identifier
Rule 7     block -> TOK_lcurly block_stats_star TOK_rcurly
Rule 8     block_stats_star -> block_stats
Rule 9     block_stats_star -> empty
Rule 10    block_stats -> block_stat
Rule 11    block_stats -> block_stats block_stat
Rule 12    block_stat -> local_variable_declaration_statement
Rule 13    block_stat -> statement
Rule 14    block_stat -> class_and_obj_declaration
Rule 15    block_stat -> method_declaration
Rule 16    expression_question -> expression
Rule 17    expression_question -> empty
Rule 18    expression -> assignment_expression
Rule 19    assignment_expression -> assignment
Rule 20    assignment_expression -> conditional_or_expression
Rule 21    assignment_expression -> method_invocation
Rule 22    assignment -> left_hand_side assignment_operator assignment_expression
Rule 23    left_hand_side -> id
Rule 24    left_hand_side -> array_access
Rule 25    id -> name
Rule 26    id -> qualified_id
Rule 27    qualified_id -> name TOK_dot name
Rule 28    name -> TOK_identifier
Rule 29    array_access -> id dimension
Rule 30    dimension -> TOK_lsqb expression TOK_rsqb
Rule 31    assignment_operator -> TOK_assignment
Rule 32    assignment_operator -> TOK_mulassign
Rule 33    assignment_operator -> TOK_divassign
Rule 34    assignment_operator -> TOK_modassign
Rule 35    assignment_operator -> TOK_addassign
Rule 36    assignment_operator -> TOK_subassign
Rule 37    conditional_or_expression -> conditional_and_expression
Rule 38    conditional_or_expression -> conditional_or_expression TOK_or conditional_and_expression
Rule 39    conditional_and_expression -> inclusive_or_expression
Rule 40    conditional_and_expression -> conditional_and_expression TOK_and inclusive_or_expression
Rule 41    inclusive_or_expression -> exclusive_or_expression
Rule 42    inclusive_or_expression -> inclusive_or_expression TOK_or_bitwise exclusive_or_expression
Rule 43    exclusive_or_expression -> and_expression
Rule 44    exclusive_or_expression -> exclusive_or_expression TOK_xor and_expression
Rule 45    and_expression -> equality_expression
Rule 46    and_expression -> and_expression TOK_and_bitwise equality_expression
Rule 47    equality_expression -> relational_expression
Rule 48    equality_expression -> equality_expression TOK_equal relational_expression
Rule 49    equality_expression -> equality_expression TOK_nequal relational_expression
Rule 50    relational_expression -> shift_expression
Rule 51    relational_expression -> relational_expression TOK_greater shift_expression
Rule 52    relational_expression -> relational_expression TOK_lesser shift_expression
Rule 53    relational_expression -> relational_expression TOK_geq shift_expression
Rule 54    relational_expression -> relational_expression TOK_leq shift_expression
Rule 55    shift_expression -> additive_expression
Rule 56    shift_expression -> shift_expression TOK_lshift additive_expression
Rule 57    shift_expression -> shift_expression TOK_rshift additive_expression
Rule 58    additive_expression -> multiplicative_expression
Rule 59    additive_expression -> additive_expression TOK_plus multiplicative_expression
Rule 60    additive_expression -> additive_expression TOK_minus multiplicative_expression
Rule 61    multiplicative_expression -> unary_expression
Rule 62    multiplicative_expression -> multiplicative_expression TOK_times unary_expression
Rule 63    multiplicative_expression -> multiplicative_expression TOK_divide unary_expression
Rule 64    multiplicative_expression -> multiplicative_expression TOK_modulus unary_expression
Rule 65    unary_expression -> TOK_plus unary_expression
Rule 66    unary_expression -> TOK_minus unary_expression
Rule 67    unary_expression -> unary_expression_not_plus_minus
Rule 68    unary_expression_not_plus_minus -> base_variable_set
Rule 69    unary_expression_not_plus_minus -> TOK_not unary_expression
Rule 70    base_variable_set -> variable_literal
Rule 71    base_variable_set -> TOK_paraleft expression TOK_pararight
Rule 72    variable_literal -> left_hand_side
Rule 73    variable_literal -> primary
Rule 74    primary -> literal
Rule 75    primary -> method_invocation
Rule 76    literal -> int_float
Rule 77    literal -> c_literal
Rule 78    c_literal -> TOK_string
Rule 79    c_literal -> KW_true
Rule 80    c_literal -> KW_false
Rule 81    c_literal -> KW_null
Rule 82    c_literal -> TOK_char
Rule 83    int_float -> TOK_float
Rule 84    int_float -> TOK_int
Rule 85    method_invocation -> id TOK_paraleft argument_list_question TOK_pararight
Rule 86    argument_list_question -> argument_list
Rule 87    argument_list_question -> empty
Rule 88    argument_list -> expression
Rule 89    argument_list -> argument_list TOK_comma expression
Rule 90    declaration_keyword -> KW_var
Rule 91    declaration_keyword -> KW_val
Rule 92    local_variable_declaration_statement -> local_variable_declaration TOK_semi
Rule 93    local_variable_declaration -> declaration_keyword variable_declaration_body
Rule 94    variable_declaration_initializer -> expression
Rule 95    variable_declaration_initializer -> array_initializer
Rule 96    variable_declaration_body -> TOK_identifier type_question TOK_assignment variable_declaration_initializer
Rule 97    variable_declarator_id -> TOK_identifier TOK_colon type
Rule 98    type -> primitive_type
Rule 99    type -> reference_type
Rule 100   primitive_type -> KW_int
Rule 101   primitive_type -> KW_double
Rule 102   primitive_type -> KW_char
Rule 103   primitive_type -> KW_string
Rule 104   primitive_type -> KW_boolean
Rule 105   primitive_type -> KW_void
Rule 106   reference_type -> array_data_type
Rule 107   array_data_type -> KW_array TOK_lsqb type TOK_rsqb
Rule 108   array_initializer -> KW_new KW_array TOK_lsqb type TOK_rsqb TOK_paraleft TOK_int TOK_pararight
Rule 109   statement -> normal_statement
Rule 110   statement -> if_then_statement
Rule 111   statement -> if_then_else_statement
Rule 112   statement -> while_statement
Rule 113   statement -> for_statement
Rule 114   normal_statement -> block
Rule 115   normal_statement -> expression_statement
Rule 116   normal_statement -> empty_statement
Rule 117   normal_statement -> return_statement
Rule 118   expression_statement -> statement_expression TOK_semi
Rule 119   statement_expression -> assignment
Rule 120   statement_expression -> method_invocation
Rule 121   if_then_statement -> KW_if TOK_paraleft expression TOK_pararight statement
Rule 122   if_then_else_statement -> KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else statement
Rule 123   if_then_else_statement_precedence -> KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else if_then_else_intermediate
Rule 124   if_then_else_intermediate -> normal_statement
Rule 125   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 126   while_statement -> KW_while TOK_paraleft expression TOK_pararight statement
Rule 127   for_statement -> KW_for TOK_paraleft for_update TOK_pararight statement
Rule 128   for_update -> for_loop for_step_opts
Rule 129   for_loop -> TOK_identifier TOK_choose expression for_untilTo expression
Rule 130   for_untilTo -> KW_until
Rule 131   for_untilTo -> KW_to
Rule 132   for_step_opts -> KW_by expression
Rule 133   for_step_opts -> empty
Rule 134   empty_statement -> TOK_semi
Rule 135   return_statement -> KW_return expression_question TOK_semi
Rule 136   type_question -> TOK_colon type
Rule 137   method_declaration -> method_header method_body
Rule 138   method_header -> KW_def name TOK_paraleft fun_params_question TOK_pararight type_question TOK_assignment
Rule 139   method_header -> KW_def name TOK_paraleft fun_params_question TOK_pararight
Rule 140   fun_params_question -> fun_params
Rule 141   fun_params_question -> empty
Rule 142   fun_params -> fun_param
Rule 143   fun_params -> fun_params TOK_comma fun_param
Rule 144   fun_param -> variable_declarator_id
Rule 145   method_body -> block
Rule 146   empty -> <empty>

Terminals, with rules where they appear

KW_Try               : 
KW_abstract          : 
KW_array             : 107 108
KW_boolean           : 104
KW_by                : 132
KW_case              : 
KW_catch             : 
KW_char              : 102
KW_class             : 
KW_def               : 138 139
KW_do                : 
KW_double            : 101
KW_else              : 122 123
KW_extends           : 
KW_false             : 80
KW_final             : 
KW_finally           : 
KW_for               : 127
KW_forSome           : 
KW_if                : 121 122 123
KW_implicit          : 
KW_import            : 
KW_int               : 100
KW_lazy              : 
KW_match             : 
KW_new               : 108
KW_null              : 81
KW_obj               : 6
KW_ofdim             : 
KW_or                : 
KW_override          : 
KW_package           : 
KW_private           : 
KW_protected         : 
KW_return            : 135
KW_sealed            : 
KW_string            : 103
KW_super             : 
KW_this              : 
KW_throw             : 
KW_to                : 131
KW_trait             : 
KW_true              : 79
KW_type              : 
KW_until             : 130
KW_val               : 91
KW_var               : 90
KW_void              : 105
KW_while             : 126
KW_with              : 
KW_yield             : 
TOK_addassign        : 35
TOK_and              : 40
TOK_and_bitwise      : 46
TOK_assignment       : 31 96 138
TOK_at               : 
TOK_char             : 82
TOK_choose           : 129
TOK_cmnt             : 
TOK_colon            : 97 136
TOK_comma            : 89 143
TOK_divassign        : 33
TOK_divide           : 63
TOK_dot              : 27
TOK_eq_gt            : 
TOK_equal            : 48
TOK_error            : 
TOK_float            : 83
TOK_geq              : 53
TOK_greater          : 51
TOK_hash             : 
TOK_identifier       : 6 28 96 97 129
TOK_ignore           : 
TOK_int              : 84 108
TOK_lcurly           : 7
TOK_leq              : 54
TOK_lesser           : 52
TOK_long             : 
TOK_lshift           : 56
TOK_lsqb             : 30 107 108
TOK_minus            : 60 66
TOK_modassign        : 34
TOK_modulus          : 64
TOK_mulassign        : 32
TOK_nequal           : 49
TOK_nl               : 
TOK_not              : 69
TOK_or               : 38
TOK_or_bitwise       : 42
TOK_paraleft         : 71 85 108 121 122 123 126 127 138 139
TOK_pararight        : 71 85 108 121 122 123 126 127 138 139
TOK_plus             : 59 65
TOK_rcurly           : 7
TOK_rshift           : 57
TOK_rsqb             : 30 107 108
TOK_semi             : 92 118 134 135
TOK_string           : 78
TOK_subassign        : 36
TOK_tilda            : 
TOK_times            : 62
TOK_xor              : 44
error                : 

Nonterminals, with rules where they appear

additive_expression  : 55 56 57 59 60
and_expression       : 43 44 46
argument_list        : 86 89
argument_list_question : 85
array_access         : 24
array_data_type      : 106
array_initializer    : 95
assignment           : 19 119
assignment_expression : 18 22
assignment_operator  : 22
base_variable_set    : 68
block                : 5 114 145
block_stat           : 10 11
block_stats          : 8 11
block_stats_star     : 7
c_literal            : 77
class_and_obj_declaration : 2 3 14
class_and_obj_declarations : 1 3
compilation_unit     : 0
conditional_and_expression : 37 38 40
conditional_or_expression : 20 38
declaration_keyword  : 93
dimension            : 29
empty                : 9 17 87 133 141
empty_statement      : 116
equality_expression  : 45 46 48 49
exclusive_or_expression : 41 42 44
expression           : 16 30 71 88 89 94 121 122 123 126 129 129 132
expression_question  : 135
expression_statement : 115
for_loop             : 128
for_statement        : 113
for_step_opts        : 128
for_untilTo          : 129
for_update           : 127
fun_param            : 142 143
fun_params           : 140 143
fun_params_question  : 138 139
id                   : 23 29 85
if_then_else_intermediate : 122 123 123
if_then_else_statement : 111
if_then_else_statement_precedence : 125
if_then_statement    : 110
inclusive_or_expression : 39 40 42
int_float            : 76
left_hand_side       : 22 72
literal              : 74
local_variable_declaration : 92
local_variable_declaration_statement : 12
method_body          : 137
method_declaration   : 15
method_header        : 137
method_invocation    : 21 75 120
multiplicative_expression : 58 59 60 62 63 64
name                 : 25 27 27 138 139
normal_statement     : 109 124
object_declaration   : 5
primary              : 73
primitive_type       : 98
qualified_id         : 26
reference_type       : 99
relational_expression : 47 48 49 51 52 53 54
return_statement     : 117
shift_expression     : 50 51 52 53 54 56 57
singleton_object     : 4
statement            : 13 121 122 126 127
statement_expression : 118
type                 : 97 107 108 136
type_question        : 96 138
unary_expression     : 61 62 63 64 65 66 69
unary_expression_not_plus_minus : 67
variable_declaration_body : 93
variable_declaration_initializer : 96
variable_declarator_id : 144
variable_literal     : 70
while_statement      : 112

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (1) compilation_unit -> . class_and_obj_declarations
    (2) class_and_obj_declarations -> . class_and_obj_declaration
    (3) class_and_obj_declarations -> . class_and_obj_declarations class_and_obj_declaration
    (4) class_and_obj_declaration -> . singleton_object
    (5) singleton_object -> . object_declaration block
    (6) object_declaration -> . KW_obj TOK_identifier

    KW_obj          shift and go to state 4

    class_and_obj_declaration      shift and go to state 1
    class_and_obj_declarations     shift and go to state 2
    compilation_unit               shift and go to state 3
    object_declaration             shift and go to state 5
    singleton_object               shift and go to state 6

state 1

    (2) class_and_obj_declarations -> class_and_obj_declaration .

    KW_obj          reduce using rule 2 (class_and_obj_declarations -> class_and_obj_declaration .)
    $end            reduce using rule 2 (class_and_obj_declarations -> class_and_obj_declaration .)


state 2

    (1) compilation_unit -> class_and_obj_declarations .
    (3) class_and_obj_declarations -> class_and_obj_declarations . class_and_obj_declaration
    (4) class_and_obj_declaration -> . singleton_object
    (5) singleton_object -> . object_declaration block
    (6) object_declaration -> . KW_obj TOK_identifier

    $end            reduce using rule 1 (compilation_unit -> class_and_obj_declarations .)
    KW_obj          shift and go to state 4

    class_and_obj_declaration      shift and go to state 7
    singleton_object               shift and go to state 6
    object_declaration             shift and go to state 5

state 3

    (0) S' -> compilation_unit .



state 4

    (6) object_declaration -> KW_obj . TOK_identifier

    TOK_identifier  shift and go to state 8


state 5

    (5) singleton_object -> object_declaration . block
    (7) block -> . TOK_lcurly block_stats_star TOK_rcurly

    TOK_lcurly      shift and go to state 9

    block                          shift and go to state 10

state 6

    (4) class_and_obj_declaration -> singleton_object .

    KW_if           reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_while        reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_for          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_def          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_var          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_val          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_lcurly      reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_semi        reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_return       reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_obj          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_identifier  reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_rcurly      reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    $end            reduce using rule 4 (class_and_obj_declaration -> singleton_object .)


state 7

    (3) class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .

    KW_obj          reduce using rule 3 (class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .)
    $end            reduce using rule 3 (class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .)


state 8

    (6) object_declaration -> KW_obj TOK_identifier .

    TOK_lcurly      reduce using rule 6 (object_declaration -> KW_obj TOK_identifier .)


state 9

    (7) block -> TOK_lcurly . block_stats_star TOK_rcurly
    (8) block_stats_star -> . block_stats
    (9) block_stats_star -> . empty
    (10) block_stats -> . block_stat
    (11) block_stats -> . block_stats block_stat
    (146) empty -> .
    (12) block_stat -> . local_variable_declaration_statement
    (13) block_stat -> . statement
    (14) block_stat -> . class_and_obj_declaration
    (15) block_stat -> . method_declaration
    (92) local_variable_declaration_statement -> . local_variable_declaration TOK_semi
    (109) statement -> . normal_statement
    (110) statement -> . if_then_statement
    (111) statement -> . if_then_else_statement
    (112) statement -> . while_statement
    (113) statement -> . for_statement
    (4) class_and_obj_declaration -> . singleton_object
    (137) method_declaration -> . method_header method_body
    (93) local_variable_declaration -> . declaration_keyword variable_declaration_body
    (114) normal_statement -> . block
    (115) normal_statement -> . expression_statement
    (116) normal_statement -> . empty_statement
    (117) normal_statement -> . return_statement
    (121) if_then_statement -> . KW_if TOK_paraleft expression TOK_pararight statement
    (122) if_then_else_statement -> . KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else statement
    (126) while_statement -> . KW_while TOK_paraleft expression TOK_pararight statement
    (127) for_statement -> . KW_for TOK_paraleft for_update TOK_pararight statement
    (5) singleton_object -> . object_declaration block
    (138) method_header -> . KW_def name TOK_paraleft fun_params_question TOK_pararight type_question TOK_assignment
    (139) method_header -> . KW_def name TOK_paraleft fun_params_question TOK_pararight
    (90) declaration_keyword -> . KW_var
    (91) declaration_keyword -> . KW_val
    (7) block -> . TOK_lcurly block_stats_star TOK_rcurly
    (118) expression_statement -> . statement_expression TOK_semi
    (134) empty_statement -> . TOK_semi
    (135) return_statement -> . KW_return expression_question TOK_semi
    (6) object_declaration -> . KW_obj TOK_identifier
    (119) statement_expression -> . assignment
    (120) statement_expression -> . method_invocation
    (22) assignment -> . left_hand_side assignment_operator assignment_expression
    (85) method_invocation -> . id TOK_paraleft argument_list_question TOK_pararight
    (23) left_hand_side -> . id
    (24) left_hand_side -> . array_access
    (25) id -> . name
    (26) id -> . qualified_id
    (29) array_access -> . id dimension
    (28) name -> . TOK_identifier
    (27) qualified_id -> . name TOK_dot name

    TOK_rcurly      reduce using rule 146 (empty -> .)
    KW_if           shift and go to state 31
    KW_while        shift and go to state 45
    KW_for          shift and go to state 25
    KW_def          shift and go to state 28
    KW_var          shift and go to state 17
    KW_val          shift and go to state 14
    TOK_lcurly      shift and go to state 9
    TOK_semi        shift and go to state 41
    KW_return       shift and go to state 42
    KW_obj          shift and go to state 4
    TOK_identifier  shift and go to state 22

    expression_statement           shift and go to state 11
    object_declaration             shift and go to state 5
    block_stat                     shift and go to state 12
    normal_statement               shift and go to state 13
    block_stats_star               shift and go to state 15
    declaration_keyword            shift and go to state 16
    if_then_statement              shift and go to state 18
    left_hand_side                 shift and go to state 19
    array_access                   shift and go to state 20
    id                             shift and go to state 21
    class_and_obj_declaration      shift and go to state 23
    method_declaration             shift and go to state 24
    return_statement               shift and go to state 26
    while_statement                shift and go to state 27
    statement                      shift and go to state 29
    statement_expression           shift and go to state 30
    method_invocation              shift and go to state 36
    empty                          shift and go to state 32
    for_statement                  shift and go to state 33
    local_variable_declaration_statement shift and go to state 34
    assignment                     shift and go to state 35
    singleton_object               shift and go to state 6
    name                           shift and go to state 37
    qualified_id                   shift and go to state 38
    method_header                  shift and go to state 39
    empty_statement                shift and go to state 40
    local_variable_declaration     shift and go to state 43
    block_stats                    shift and go to state 44
    block                          shift and go to state 46
    if_then_else_statement         shift and go to state 47

state 10

    (5) singleton_object -> object_declaration block .

    KW_obj          reduce using rule 5 (singleton_object -> object_declaration block .)
    $end            reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_if           reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_while        reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_for          reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_def          reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_var          reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_val          reduce using rule 5 (singleton_object -> object_declaration block .)
    TOK_lcurly      reduce using rule 5 (singleton_object -> object_declaration block .)
    TOK_semi        reduce using rule 5 (singleton_object -> object_declaration block .)
    KW_return       reduce using rule 5 (singleton_object -> object_declaration block .)
    TOK_identifier  reduce using rule 5 (singleton_object -> object_declaration block .)
    TOK_rcurly      reduce using rule 5 (singleton_object -> object_declaration block .)


state 11

    (115) normal_statement -> expression_statement .

    KW_if           reduce using rule 115 (normal_statement -> expression_statement .)
    KW_while        reduce using rule 115 (normal_statement -> expression_statement .)
    KW_for          reduce using rule 115 (normal_statement -> expression_statement .)
    KW_def          reduce using rule 115 (normal_statement -> expression_statement .)
    KW_var          reduce using rule 115 (normal_statement -> expression_statement .)
    KW_val          reduce using rule 115 (normal_statement -> expression_statement .)
    TOK_lcurly      reduce using rule 115 (normal_statement -> expression_statement .)
    TOK_semi        reduce using rule 115 (normal_statement -> expression_statement .)
    KW_return       reduce using rule 115 (normal_statement -> expression_statement .)
    KW_obj          reduce using rule 115 (normal_statement -> expression_statement .)
    TOK_identifier  reduce using rule 115 (normal_statement -> expression_statement .)
    TOK_rcurly      reduce using rule 115 (normal_statement -> expression_statement .)
    KW_else         reduce using rule 115 (normal_statement -> expression_statement .)


state 12

    (10) block_stats -> block_stat .

    KW_if           reduce using rule 10 (block_stats -> block_stat .)
    KW_while        reduce using rule 10 (block_stats -> block_stat .)
    KW_for          reduce using rule 10 (block_stats -> block_stat .)
    KW_def          reduce using rule 10 (block_stats -> block_stat .)
    KW_var          reduce using rule 10 (block_stats -> block_stat .)
    KW_val          reduce using rule 10 (block_stats -> block_stat .)
    TOK_lcurly      reduce using rule 10 (block_stats -> block_stat .)
    TOK_semi        reduce using rule 10 (block_stats -> block_stat .)
    KW_return       reduce using rule 10 (block_stats -> block_stat .)
    KW_obj          reduce using rule 10 (block_stats -> block_stat .)
    TOK_identifier  reduce using rule 10 (block_stats -> block_stat .)
    TOK_rcurly      reduce using rule 10 (block_stats -> block_stat .)


state 13

    (109) statement -> normal_statement .

    KW_if           reduce using rule 109 (statement -> normal_statement .)
    KW_while        reduce using rule 109 (statement -> normal_statement .)
    KW_for          reduce using rule 109 (statement -> normal_statement .)
    KW_def          reduce using rule 109 (statement -> normal_statement .)
    KW_var          reduce using rule 109 (statement -> normal_statement .)
    KW_val          reduce using rule 109 (statement -> normal_statement .)
    TOK_lcurly      reduce using rule 109 (statement -> normal_statement .)
    TOK_semi        reduce using rule 109 (statement -> normal_statement .)
    KW_return       reduce using rule 109 (statement -> normal_statement .)
    KW_obj          reduce using rule 109 (statement -> normal_statement .)
    TOK_identifier  reduce using rule 109 (statement -> normal_statement .)
    TOK_rcurly      reduce using rule 109 (statement -> normal_statement .)


state 14

    (91) declaration_keyword -> KW_val .

    TOK_identifier  reduce using rule 91 (declaration_keyword -> KW_val .)


state 15

    (7) block -> TOK_lcurly block_stats_star . TOK_rcurly

    TOK_rcurly      shift and go to state 48


state 16

    (93) local_variable_declaration -> declaration_keyword . variable_declaration_body
    (96) variable_declaration_body -> . TOK_identifier type_question TOK_assignment variable_declaration_initializer

    TOK_identifier  shift and go to state 50

    variable_declaration_body      shift and go to state 49

state 17

    (90) declaration_keyword -> KW_var .

    TOK_identifier  reduce using rule 90 (declaration_keyword -> KW_var .)


state 18

    (110) statement -> if_then_statement .

    KW_if           reduce using rule 110 (statement -> if_then_statement .)
    KW_while        reduce using rule 110 (statement -> if_then_statement .)
    KW_for          reduce using rule 110 (statement -> if_then_statement .)
    KW_def          reduce using rule 110 (statement -> if_then_statement .)
    KW_var          reduce using rule 110 (statement -> if_then_statement .)
    KW_val          reduce using rule 110 (statement -> if_then_statement .)
    TOK_lcurly      reduce using rule 110 (statement -> if_then_statement .)
    TOK_semi        reduce using rule 110 (statement -> if_then_statement .)
    KW_return       reduce using rule 110 (statement -> if_then_statement .)
    KW_obj          reduce using rule 110 (statement -> if_then_statement .)
    TOK_identifier  reduce using rule 110 (statement -> if_then_statement .)
    TOK_rcurly      reduce using rule 110 (statement -> if_then_statement .)


state 19

    (22) assignment -> left_hand_side . assignment_operator assignment_expression
    (31) assignment_operator -> . TOK_assignment
    (32) assignment_operator -> . TOK_mulassign
    (33) assignment_operator -> . TOK_divassign
    (34) assignment_operator -> . TOK_modassign
    (35) assignment_operator -> . TOK_addassign
    (36) assignment_operator -> . TOK_subassign

    TOK_assignment  shift and go to state 56
    TOK_mulassign   shift and go to state 57
    TOK_divassign   shift and go to state 51
    TOK_modassign   shift and go to state 52
    TOK_addassign   shift and go to state 54
    TOK_subassign   shift and go to state 53

    assignment_operator            shift and go to state 55

state 20

    (24) left_hand_side -> array_access .

    TOK_times       reduce using rule 24 (left_hand_side -> array_access .)
    TOK_divide      reduce using rule 24 (left_hand_side -> array_access .)
    TOK_modulus     reduce using rule 24 (left_hand_side -> array_access .)
    TOK_plus        reduce using rule 24 (left_hand_side -> array_access .)
    TOK_minus       reduce using rule 24 (left_hand_side -> array_access .)
    TOK_lshift      reduce using rule 24 (left_hand_side -> array_access .)
    TOK_rshift      reduce using rule 24 (left_hand_side -> array_access .)
    TOK_greater     reduce using rule 24 (left_hand_side -> array_access .)
    TOK_lesser      reduce using rule 24 (left_hand_side -> array_access .)
    TOK_geq         reduce using rule 24 (left_hand_side -> array_access .)
    TOK_leq         reduce using rule 24 (left_hand_side -> array_access .)
    TOK_equal       reduce using rule 24 (left_hand_side -> array_access .)
    TOK_nequal      reduce using rule 24 (left_hand_side -> array_access .)
    TOK_and_bitwise reduce using rule 24 (left_hand_side -> array_access .)
    TOK_xor         reduce using rule 24 (left_hand_side -> array_access .)
    TOK_or_bitwise  reduce using rule 24 (left_hand_side -> array_access .)
    TOK_and         reduce using rule 24 (left_hand_side -> array_access .)
    TOK_or          reduce using rule 24 (left_hand_side -> array_access .)
    TOK_semi        reduce using rule 24 (left_hand_side -> array_access .)
    TOK_comma       reduce using rule 24 (left_hand_side -> array_access .)
    TOK_pararight   reduce using rule 24 (left_hand_side -> array_access .)
    TOK_rsqb        reduce using rule 24 (left_hand_side -> array_access .)
    KW_until        reduce using rule 24 (left_hand_side -> array_access .)
    KW_to           reduce using rule 24 (left_hand_side -> array_access .)
    KW_by           reduce using rule 24 (left_hand_side -> array_access .)
    TOK_assignment  reduce using rule 24 (left_hand_side -> array_access .)
    TOK_mulassign   reduce using rule 24 (left_hand_side -> array_access .)
    TOK_divassign   reduce using rule 24 (left_hand_side -> array_access .)
    TOK_modassign   reduce using rule 24 (left_hand_side -> array_access .)
    TOK_addassign   reduce using rule 24 (left_hand_side -> array_access .)
    TOK_subassign   reduce using rule 24 (left_hand_side -> array_access .)


state 21

    (85) method_invocation -> id . TOK_paraleft argument_list_question TOK_pararight
    (23) left_hand_side -> id .
    (29) array_access -> id . dimension
    (30) dimension -> . TOK_lsqb expression TOK_rsqb

    TOK_paraleft    shift and go to state 58
    TOK_assignment  reduce using rule 23 (left_hand_side -> id .)
    TOK_mulassign   reduce using rule 23 (left_hand_side -> id .)
    TOK_divassign   reduce using rule 23 (left_hand_side -> id .)
    TOK_modassign   reduce using rule 23 (left_hand_side -> id .)
    TOK_addassign   reduce using rule 23 (left_hand_side -> id .)
    TOK_subassign   reduce using rule 23 (left_hand_side -> id .)
    TOK_times       reduce using rule 23 (left_hand_side -> id .)
    TOK_divide      reduce using rule 23 (left_hand_side -> id .)
    TOK_modulus     reduce using rule 23 (left_hand_side -> id .)
    TOK_plus        reduce using rule 23 (left_hand_side -> id .)
    TOK_minus       reduce using rule 23 (left_hand_side -> id .)
    TOK_lshift      reduce using rule 23 (left_hand_side -> id .)
    TOK_rshift      reduce using rule 23 (left_hand_side -> id .)
    TOK_greater     reduce using rule 23 (left_hand_side -> id .)
    TOK_lesser      reduce using rule 23 (left_hand_side -> id .)
    TOK_geq         reduce using rule 23 (left_hand_side -> id .)
    TOK_leq         reduce using rule 23 (left_hand_side -> id .)
    TOK_equal       reduce using rule 23 (left_hand_side -> id .)
    TOK_nequal      reduce using rule 23 (left_hand_side -> id .)
    TOK_and_bitwise reduce using rule 23 (left_hand_side -> id .)
    TOK_xor         reduce using rule 23 (left_hand_side -> id .)
    TOK_or_bitwise  reduce using rule 23 (left_hand_side -> id .)
    TOK_and         reduce using rule 23 (left_hand_side -> id .)
    TOK_or          reduce using rule 23 (left_hand_side -> id .)
    TOK_semi        reduce using rule 23 (left_hand_side -> id .)
    TOK_pararight   reduce using rule 23 (left_hand_side -> id .)
    KW_until        reduce using rule 23 (left_hand_side -> id .)
    KW_to           reduce using rule 23 (left_hand_side -> id .)
    TOK_comma       reduce using rule 23 (left_hand_side -> id .)
    KW_by           reduce using rule 23 (left_hand_side -> id .)
    TOK_rsqb        reduce using rule 23 (left_hand_side -> id .)
    TOK_lsqb        shift and go to state 60

    dimension                      shift and go to state 59

state 22

    (28) name -> TOK_identifier .
